# email-subscribe

./: Cargo.toml  Dockerfile  configuration.yml
configuration/: base.yml  local.yml  production.yml
migrations/: 20250103150100_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
